kubernetes/apps/apps/tunnel/jellyfin/access/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps-media-stack
  annotations:
    volsync.backube/privileged-movers: "true"
