kubernetes/apps/apps/tunnel/jellyfin/access/service.yaml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: jellyfin-service
# spec:
#   type: ExternalName
#   externalName: wireguard.network.svc.cluster.local
#   ports:
#     - name: http
#       targetPort: 443
#       port: 443
#       # targetPort: 8097
#       # port: 8097
---
kind: Service
apiVersion: v1
metadata:
  name: jelly-service
  labels:
    service-type: ingress #TODO is this neccesary?
  annotations:
    service.cilium.io/affinity: "remote"
    service.cilium.io/global: "true"
    traefik.ingress.kubernetes.io/service.nativelb: "true"
spec:
  ports:
  - port: 8096
    targetPort: 8096
    name: jellyfin-tcp
    protocol: TCP
  sessionAffinity: ClientIP          # backup sticky-session at kube level
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800          # 3 hours — covers long watch sessions
